@@ -37,11 +37,18 @@ HOW TO UPDATE?
 
 Breaking Changes:
 
+- Moved the optional "courtesy maths operators" implementation from imgui_internal.h in imgui.h.
+  Even though we encourage using your own maths types and operators by setting up IM_VEC2_CLASS_EXTRA,
+  it has been frequently requested by people to use our own. We had an opt-in define which was
+  previously fulfilled in imgui_internal.h. It is now fulfilled in imgui.h. (#6164, #6137, #5966, #2832)
+   OK:     #define IMGUI_DEFINE_MATH_OPERATORS / #include "imgui.h" / #include "imgui_internal.h"
+   Error:  #include "imgui.h" / #define IMGUI_DEFINE_MATH_OPERATORS / #include "imgui_internal.h"
+  Added a dedicated compile-time check message to help diagnose this.
+
 Other changes:
 
 - Backends: Win32: Use WM_NCMOUSEMOVE / WM_NCMOUSELEAVE to track mouse positions over
   non-client area (e.g. OS decorations) when app is not focused. (#6045, #6162)
-
 
 
 -----------------------------------------------------------------------
@@ -373,6 +380,10 @@ Other Changes:
   asserts with 16-bits ImDrawVtx). (#5720)
 - Fonts: Added GetGlyphRangesGreek() helper for Greek & Coptic glyph range. (#5676, #5727) [@azonenberg]
 - ImDrawList: Not using alloca() anymore, lift single polygon size limits. (#5704, #1811)
+  - Note: now using a temporary buffer stored in ImDrawListSharedData.
+    This change made it more visible than you cannot append to multiple ImDrawList from multiple
+    threads if they share the same ImDrawListSharedData. Previously it was a little more likely
+    for this to "accidentally" work, but was already incorrect. (#6167)
 - Platform IME: [Windows] Removed call to ImmAssociateContextEx() leading to freeze on some setups.
   (#2589, #5535, #5264, #4972)
 - Misc: better error reporting for PopStyleColor()/PopStyleVar() + easier to recover. (#1651)
